@@ -413,14 +413,16 @@ L<Mojo::Template> will return L<Mojo::Exception> objects that stringify to
 error messages with context.
 
   Bareword "xx" not allowed while "strict subs" in use at template line 4.
-  2: </head>
-  3: <body>
-  4: % my $i = 2; xx
-  5: %= $i * 2
-  6: </body>
-  template:4 (Mojo::Template::Sandbox)
-  path/to/Mojo/Template.pm:123 (Mojo::Template)
-  path/to/myapp.pl:123 (main)
+  Context:
+    2: </head>
+    3: <body>
+    4: % my $i = 2; xx
+    5: %= $i * 2
+    6: </body>
+  Traceback (most recent call first):
+    File "template", line 4, in "Mojo::Template::Sandbox"
+    File "path/to/Mojo/Template.pm", line 123, in "Mojo::Template"
+    File "path/to/myapp.pl", line 123, in "main"
 
 =head1 ATTRIBUTES
 
