@@ -1,10 +1,12 @@
 
 8.19  2019-07-07
-  - Added EXPERIMENTAL check function to Mojo::Exception.
+  - Added EXPERIMENTAL check and raise functions to Mojo::Exception.
   - Added support for MOJO_EXCEPTION_VERBOSE environment variable.
   - Added -f option to generate plugin command.
   - Improved inspect method in Mojo::Exception to be safe to call more than
     once.
+  - Fixed various stack trace bugs in Mojo::Exception, so your error messages
+    and stack traces can look slightly different than before.
   - Fixed bugs in reply->exception helper that could result in exceptions
     without error message.
   - Fixed daemonize exception handling in Mojo::Server. (skaji)
